<resources>
    <string name="app_name">Farmer Buddy</string>
    <string name="usename">Email</string>
    <string name="password">Password</string>
    <string name="Login">Log In</string>
    <string name="Signup">Sign Up</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="crop_name">Crop Name</string>
    <string name="quantity">Quantity</string>
    <string name="address">Address</string>
    <string name="sell">Sell</string>
    <string name="buy">Buy</string>
    <string name="number">Phone Number</string>
    <string name="details">Details</string>
    <string name="title_activity_crop_view">CropView</string>
    <string name="send_email">Send Email Reset Link</string>
    <string name="Remeber_password">Remember Password ?</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="already_account">Already have an account ?</string>
    <string name="textview">Welcome</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="save">Save</string>
</resources>
