<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="670dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="264dp"
                android:src="@drawable/background" />


            <EditText
                android:id="@+id/cropname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/crop_name" />

            <EditText
                android:id="@+id/quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/quantity" />

            <EditText
                android:id="@+id/details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/details" />

            <Button
                android:id="@+id/buttonsell"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Sell" />


        </LinearLayout>

    </ScrollView>

</RelativeLayout>